@@ -1,7 +1,7 @@
 0. Metadata
 -----------
 File version:	$Id$
-Copyright:		Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+Copyright:		Copyright (C) 2005 - 2010 Open Source Matters, Inc. All rights reserved.
 License:		GNU General Public License version 2 or later; see LICENSE.txt
 
 1. Copyright and disclaimer
@@ -26,6 +26,13 @@ $ -> Language fix or change
 ^ -> Change
 - -> Removed
 ! -> Note
+
+19-Jan-2010 Andrew Eddie
+ + Added JHtmlImage::system helper.
+ ^ Changed JHtmlGrid::sort to use new system images check.
+
+18-Jan-2010 Louis Landry
+^ Adjust copyright notices for 2010
 
 18-Jan-2010 Jean-Marie Simonet
 ^ Added Description metadata in plugins edit screen
